[tool.poetry]
name = "pdb-social-network"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "pdb_social_network"}]

[tool.poetry.dependencies]
python = "^3.11"
litestar = {extras = ["standard"], version = "^2.2.1"}
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
