[tool.poetry]
name = "pdb-social-network"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "pdb_social_network"}]

[tool.poetry.dependencies]
python = "^3.11"
litestar = {extras = ["sqlalchemy", "standard"], version = "^2.2.1"}
pika = "^1.3.2"
pre-commit = "^3.5.0"
pytest = "^7.4.2"
vcrpy = "^5.1.0"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.22"
aiosqlite = "^0.19.0"
asyncpg = "^0.28.0"
motor = "^3.3.1"

[tool.black]
line-length = 100
target-version = ['py311']
skip-string-normalization = true

[tool.isort]
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = 'app'
line_length = 100
indent = '    '
multi_line_output = 3
force_grid_wrap = 0

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
